Fixed showcase img alignment

--- a/src/assets/sass/Home.scss
+++ b/src/assets/sass/Home.scss
@@ -379,8 +379,8 @@
         }
 
         .showcase-img {
-          width: 90%;
-          height: 90%;
+          width: 100%;
+          height: 100%;
           position: absolute;
           z-index: -99 !important;
           top: 0;
